# Bahupada_Employee_Frontend

./: .gitignore  README.md  deploy_backend.sh
apps/backend/: bench.py  pyproject.toml  pyrightconfig.json  pytest.ini  run_migration.py  simulate_api.py
apps/backend/app/: main.py
apps/backend/migrations/: 001_initial.sql  002_hardening_schema.sql  003_scale_hardening.sql  004_idempotency_scope.sql  005_pricing_precedence_and_fefo.sql  006_planning_and_finance_extensions.sql  007_identity_portal_hardening.sql  008_purchase_rack_inventory_updates.sql  009_products_search_indexes.sql  010_customer_category_and_customer_fields.sql  011_split_distributor_wholesaler_category.sql  012_add_invoice_number_to_sales_orders.sql  013_sales_order_as_initial_cutover.sql  014_sales_order_cutover_recovery.sql  015_seed_operations_employees.sql  016_backfill_seeded_employee_genders.sql  017_add_delivery_employee_role_and_backfill.sql  018_api_latency_indexes.sql  019_hotpath_fk_and_sort_indexes.sql  020_party_ledger_accounts.sql  021_unified_portal_auth.sql  022_backfill_admin_system_user.sql  023_seed_portal_permissions.sql  024_reset_client_data_keep_system_auth.sql  024_sales_order_latency_indexes.sql  025_expand_schemes_for_discount_and_free_item_rules.sql  026_seed_scheme_demo_data.sql  027_invoice_delivery_workflow.sql  028_delivery_run_allocation_workflow.sql  029_product_lookup_masters.sql  029_purchase_bill_direct_entry.sql  030_account_categories.sql  031_customer_address_split.sql  032_admin_super_admin_rbac.sql  033_admin_delivery_permissions.sql  035_vendor_brands.sql  (+22 more)
(+238 files in other folders)
